layout desktop change

--- a/index.html
+++ b/index.html
@@ -62,7 +62,16 @@
           </div>
           <!-- </div> -->
 
-          <div class="nav-items">
+          <div class="nav-items nav-mobile">
+            <ul class="nav-display">
+              <!-- <li> <a href="#">Home</a> </li> -->
+              <li> <a class="nav-link" href="#about">About</a> </li>
+              <li> <a class="nav-link" href="#services">Services</a> </li>
+              <li> <a class="nav-link" href="#get-in-touch">Get in touch </a> </li>
+            </ul>
+          </div>
+
+          <div class="nav-items nav-destop">
             <ul class="nav-display">
               <!-- <li> <a href="#">Home</a> </li> -->
               <li> <a class="nav-link" href="#about">About</a> </li>
@@ -84,8 +93,7 @@
       <div class="hero-main">
         <img class="hero-image-mobile" src="/assets/images/grainTractorMobile.jpeg"
           alt="grain tractor harvesting wheat">
-        <img class="hero-image-desktop" src="/assets/images/sheepDesktop.avif"
-          alt="grain tractor harvesting wheat">
+        <img class="hero-image-desktop" src="/assets/images/sheepDesktop.avif" alt="grain tractor harvesting wheat">
         <div class="hero-overlay">
           <div class="hero-title">
             <div>Independent Farm
@@ -128,94 +136,124 @@
       <h2 class="section-title">How can we help you?</h2>
 
       <div class="services-card">
-        <h3>Countryside Stewardship</h3>
-        <img class="services-img-mobile" src="/assets/images/fieldTractorMobile.jpeg" alt="">
-        <img class="services-img-desktop" src="/assets/images/fieldTractorDesktop3.jpeg" alt="">
-
-        <div class="stewardship-options">
-          <div class="stewardship-title">
-            <h4 class="stewardship-link">Pre-entry Countryside Stewardship Farm Review</h4>
-            <h4 class="stewardship-btn">+</h4>
-          </div>
-          <p class="stewardship-description">An initial visit to your farm to discuss the Countryside
-            Stewardship scheme requirements, priorities for your area and to identify potential options that you may
-            like
-            to consider in your application. A short report will be produced to help inform your future application.</p>
+        <div class="services-card-title">
+          <h3>Countryside Stewardship</h3>
         </div>
 
-
-        <div class="stewardship-options">
-          <div class="stewardship-title">
-            <h4 class="stewardship-link">Mid Tier, Higher Tier and Capital Grant Applications</h4>
-            <h4 class="stewardship-btn">+</h4>
-          </div>
-          <p class="stewardship-description">With over 10 years in undertaking successful
-            agri-environment scheme applications, Amanda will work with you to design an application that meets the
-            priorities for the area. Maximising your chances of a successful agreement, while working with the
-            requirements of your farm business.</p>
+        <div class="services-card-img">
+          <img class="services-img-mobile" src="/assets/images/fieldTractorMobile.jpeg" alt="">
+          <img class="services-img-desktop" src="/assets/images/fieldTractorDesktop3.jpeg" alt="">
         </div>
 
-        <div class="stewardship-options">
-          <div class="stewardship-title">
-            <h4 class="stewardship-link">Application Check </h4>
-            <h4 class="stewardship-btn">+</h4>
+        <div class="services-card-content">
+          <div class="stewardship-options">
+            <div class="stewardship-title">
+              <h4 class="stewardship-link">Pre-entry Countryside Stewardship Farm Review</h4>
+              <h4 class="stewardship-btn">+</h4>
+            </div>
+            <p class="stewardship-description">An initial visit to your farm to discuss the Countryside
+              Stewardship scheme requirements, priorities for your area and to identify potential options that you may
+              like
+              to consider in your application. A short report will be produced to help inform your future application.
+            </p>
           </div>
-          <p class="stewardship-description">If you prefer to carry out your own application we provide an application
-            check service, ensuring the forms
-            have been completed as required and advising on whether the options chosen fit with the
-            Countryside Stewardship priorities for the area, maximising your chances of a successful application.</p>
-        </div>
 
-        <div class="stewardship-options">
-          <div class="stewardship-title">
-            <h4 class="stewardship-link">Stewardship Scheme MOT</h4>
-            <h4 class="stewardship-btn">+</h4>
+          <div class="stewardship-options">
+            <div class="stewardship-title">
+              <h4 class="stewardship-link">Mid Tier, Higher Tier and Capital Grant Applications</h4>
+              <h4 class="stewardship-btn">+</h4>
+            </div>
+            <p class="stewardship-description">With over 10 years in undertaking successful
+              agri-environment scheme applications, Amanda will work with you to design an application that meets the
+              priorities for the area. Maximising your chances of a successful agreement, while working with the
+              requirements of your farm business.</p>
           </div>
-          <p class="stewardship-description">Helping you to ensure you are meeting the requirements of your ELS, OELS,
-            HLS or Countryside Stewardship
-            scheme. Providing reassurance on compliance with the regulatory requirements together
-            with advice on how to maximise the environmental benefits of your scheme.</p>
+
+          <div class="stewardship-options">
+            <div class="stewardship-title">
+              <h4 class="stewardship-link">Application Check </h4>
+              <h4 class="stewardship-btn">+</h4>
+            </div>
+            <p class="stewardship-description">If you prefer to carry out your own application we provide an application
+              check service, ensuring the forms
+              have been completed as required and advising on whether the options chosen fit with the
+              Countryside Stewardship priorities for the area, maximising your chances of a successful application.</p>
+          </div>
+
+          <div class="stewardship-options">
+            <div class="stewardship-title">
+              <h4 class="stewardship-link">Stewardship Scheme MOT</h4>
+              <h4 class="stewardship-btn">+</h4>
+            </div>
+            <p class="stewardship-description">Helping you to ensure you are meeting the requirements of your ELS, OELS,
+              HLS or Countryside Stewardship
+              scheme. Providing reassurance on compliance with the regulatory requirements together
+              with advice on how to maximise the environmental benefits of your scheme.</p>
+          </div>
+
         </div>
       </div>
 
       <div class="services-card">
-        <h3>Access to support schemes</h3>
-        <img src="/assets/images/lambsMobile.jpeg" alt="">
-        <p class="services-description">A wide variety of grants are now available to farmers in order to help support environmental management.</p>
+        <div class="services-card-title">
+          <h3>Access to support schemes</h3>
+        </div>
 
-        <p class="services-description">From Mid Tier to Higher Tier, Capital Grants and Woodland Support Grants, through to Farming in Protected
-          Landscapes, Farming Investment Fund, Water Company grant schemes.</p>
+        <div class="services-card-img"> <img src="/assets/images/lambsMobile.jpeg" alt=""></div>
 
-        <p class="services-description">With over 10 years experience in undertaking successful agri-environment scheme applications as well
-          as working with Catchment Sensitive Farming and Water Companies to implement and deliver grant schemes, Amanda
-          can advise you on funding opportunities available, help you to decide what is right for your farm and assist
-          from application to delivery.
-        </p>
+        <div class="services-card-content">
+          <p class="services-description">A wide variety of grants are now available to farmers in order to help support
+            environmental management.</p>
+
+          <p class="services-description">From Mid Tier to Higher Tier, Capital Grants and Woodland Support Grants,
+            through to Farming in Protected
+            Landscapes, Farming Investment Fund, Water Company grant schemes.</p>
+
+          <p class="services-description">With over 10 years experience in undertaking successful agri-environment
+            scheme
+            applications as well
+            as working with Catchment Sensitive Farming and Water Companies to implement and deliver grant schemes,
+            Amanda
+            can advise you on funding opportunities available, help you to decide what is right for your farm and assist
+            from application to delivery.
+          </p>
+        </div>
       </div>
 
       <div class="services-card">
-        <h3>Soil Management</h3>
-        <img src="/assets/images/soilManagementMobile.jpeg" alt="">
-        <!-- <h4>Soil Management Plans</h4> -->
-        <p class="services-description">Provide advice on diffuse pollution and resource protection including the soil management requirements under
-          Cross Compliance.</p>
+        <div class="services-card-title">
+          <h3>Soil Management</h3>
+        </div>
+        <div class="services-card-img"> <img src="/assets/images/soilManagementMobile.jpeg" alt=""></div>
+
+        <div class="services-card-content">
+          <p class="services-description">Provide advice on diffuse pollution and resource protection including the soil
+            management requirements under
+            Cross Compliance.</p>
+        </div>
       </div>
 
       <div class="services-card">
-        <h3>Farm Advice Training and
-          Workshops</h3>
-        <img src="/assets/images/workshopMobile.jpeg" alt="">
-        <p class="services-description">Experienced in arranging and delivering training and workshops on a range of topics.</p>
-        <p>Recent events have included:</p>
-        <ul>
-          <li>hedgerow management</li>
-          <li>soil management</li>
-          <li>NVZ and Cross Compliance update</li>
-          <li>biobeds</li>
-          <li>equine management</li>
-          <li>farm pollinators</li>
-          <li>slug control</li>
-        </ul>
+        <div class="services-card-title">
+          <h3>Farm Advice Training and
+            Workshops</h3>
+        </div>
+        <div class="services-card-img"> <img src="/assets/images/workshopMobile.jpeg" alt=""></div>
+
+        <div class="services-card-content">
+          <p class="services-description">Experienced in arranging and delivering training and workshops on a range of
+            topics.</p>
+          <p>Recent events have included:</p>
+          <ul>
+            <li>hedgerow management</li>
+            <li>soil management</li>
+            <li>NVZ and Cross Compliance update</li>
+            <li>biobeds</li>
+            <li>equine management</li>
+            <li>farm pollinators</li>
+            <li>slug control</li>
+          </ul>
+        </div>
 
       </div>
 
@@ -232,27 +270,27 @@
 
       <div class="social-links flex-center">
 
-      <div>
-        <ul class="flex-center">
-          <li><a href="http://twitter.com"><i class="fa-brands fa-twitter"></i></a></li>
+        <div>
+          <ul class="flex-center">
+            <li><a href="http://twitter.com"><i class="fa-brands fa-twitter"></i></a></li>
 
-          <li><a href="https://facebook.com"><i class="fa-brands fa-facebook-f"></i></a></li>
+            <li><a href="https://facebook.com"><i class="fa-brands fa-facebook-f"></i></a></li>
 
-          <li><a href="https://linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a></li>
-        </ul>
-        
+            <li><a href="https://linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a></li>
+          </ul>
+
+        </div>
+
+        <div class="copyright flex-center">
+          <p>&copy; <span id="date"></span></p>
+          <p> Skylark Farm Advice</p>
+        </div>
+
       </div>
 
-      <div class="copyright flex-center">
-        <p>&copy; <span id="date"></span></p>
-        <p> Skylark Farm Advice</p>
-      </div>
-
-      </div>
 
 
 
-      
     </footer>
 
 
