--- a/index.html
+++ b/index.html
@@ -93,205 +93,206 @@
       <div class="hero-main">
         <img class="hero-image-mobile" src="/assets/images/grainTractorMobile.jpeg"
           alt="grain tractor harvesting wheat">
-        <img class="hero-image-desktop" src="/assets/images/sheepDesktop.avif" alt="grain tractor harvesting wheat">
+        <img class="hero-image-desktop" src="/assets/images/sheepDesktop.webp" alt="grain tractor harvesting wheat">
         <div class="hero-overlay">
           <div class="hero-title">
-            <div>Independent Farm
-              <div>Advice Service</div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-
-
-
-    </section>
-    <!-- Hero Section End Here -->
-
-
-    <!-- About Section Starts Here -->
-    <section class="about-wrapper" id="about">
-      <h2 class="section-title">About Skylark</h2>
-      <p class="about-description">We specialise in working with farmers to <span class="text-highlight">maximise</span>
-        the environmental potential of their land while <span class="text-highlight">supporting</span> the farm
-        business.</p>
-
-      <p>Offering a range of services including including countryside stewardship; habitat and species surveys, and
-        advice; compliance and greening guidance; soil management; meeting regulatory requirements, workshops and
-        training and assurance schemes.</p>
-
-      <p>With over 15 years of providing farm advice in Hampshire and the surrounding areas, Amanda has a BSc in Ecology
-        and is a member of the Chartered Institute of Ecology and Environmental Management as well as holding
-        certificates in BASIS Foundation in Agronomy, Soil and Water Management and Conservation Management. She has
-        over 10 years experience of working on agri-environment schemes including Countryside Stewardship as well as
-        delivery of independent grant schemes and partnership projects.</p>
-
-    </section>
-    <!-- About Section Ends Here -->
-
-
-    <!-- Services Section Starts Here -->
-    <section class="services-wrapper" id="services">
-      <h2 class="section-title">How can we help you?</h2>
-
-      <div class="services-card">
-        <div class="services-card-title">
-          <h3>Countryside Stewardship</h3>
-        </div>
-
-        <div class="services-card-img">
-          <img class="services-img-mobile" src="/assets/images/fieldTractorMobile.jpeg" alt="">
-          <img class="services-img-desktop" src="/assets/images/fieldTractorDesktop3.jpeg" alt="">
-        </div>
-
-        <div class="services-card-content">
-          <div class="stewardship-options">
-            <div class="stewardship-title">
-              <h4 class="stewardship-link">Pre-entry Countryside Stewardship Farm Review</h4>
-              <h4 class="stewardship-btn">+</h4>
-            </div>
-            <p class="stewardship-description">An initial visit to your farm to discuss the Countryside
-              Stewardship scheme requirements, priorities for your area and to identify potential options that you may
-              like
-              to consider in your application. A short report will be produced to help inform your future application.
-            </p>
-          </div>
-
-          <div class="stewardship-options">
-            <div class="stewardship-title">
-              <h4 class="stewardship-link">Mid Tier, Higher Tier and Capital Grant Applications</h4>
-              <h4 class="stewardship-btn">+</h4>
-            </div>
-            <p class="stewardship-description">With over 10 years in undertaking successful
-              agri-environment scheme applications, Amanda will work with you to design an application that meets the
-              priorities for the area. Maximising your chances of a successful agreement, while working with the
-              requirements of your farm business.</p>
-          </div>
-
-          <div class="stewardship-options">
-            <div class="stewardship-title">
-              <h4 class="stewardship-link">Application Check </h4>
-              <h4 class="stewardship-btn">+</h4>
-            </div>
-            <p class="stewardship-description">If you prefer to carry out your own application we provide an application
-              check service, ensuring the forms
-              have been completed as required and advising on whether the options chosen fit with the
-              Countryside Stewardship priorities for the area, maximising your chances of a successful application.</p>
-          </div>
-
-          <div class="stewardship-options">
-            <div class="stewardship-title">
-              <h4 class="stewardship-link">Stewardship Scheme MOT</h4>
-              <h4 class="stewardship-btn">+</h4>
-            </div>
-            <p class="stewardship-description">Helping you to ensure you are meeting the requirements of your ELS, OELS,
-              HLS or Countryside Stewardship
-              scheme. Providing reassurance on compliance with the regulatory requirements together
-              with advice on how to maximise the environmental benefits of your scheme.</p>
-          </div>
-
+          <div>Independent Farm</div>
+          <div>Advice Service</div>
         </div>
       </div>
 
-      <div class="services-card">
-        <div class="services-card-title">
-          <h3>Access to support schemes</h3>
-        </div>
+       </div>
 
-        <div class="services-card-img"> <img src="/assets/images/lambsMobile.jpeg" alt=""></div>
+  </div>
 
-        <div class="services-card-content">
-          <p class="services-description">A wide variety of grants are now available to farmers in order to help support
-            environmental management.</p>
 
-          <p class="services-description">From Mid Tier to Higher Tier, Capital Grants and Woodland Support Grants,
-            through to Farming in Protected
-            Landscapes, Farming Investment Fund, Water Company grant schemes.</p>
 
-          <p class="services-description">With over 10 years experience in undertaking successful agri-environment
-            scheme
-            applications as well
-            as working with Catchment Sensitive Farming and Water Companies to implement and deliver grant schemes,
-            Amanda
-            can advise you on funding opportunities available, help you to decide what is right for your farm and assist
-            from application to delivery.
+  </section>
+  <!-- Hero Section End Here -->
+
+
+  <!-- About Section Starts Here -->
+  <section class="about-wrapper" id="about">
+    <h2 class="section-title">About Skylark</h2>
+    <p class="about-description">We specialise in working with farmers to <span class="text-highlight">maximise</span>
+      the environmental potential of their land while <span class="text-highlight">supporting</span> the farm
+      business.</p>
+
+    <p>Offering a range of services including including countryside stewardship; habitat and species surveys, and
+      advice; compliance and greening guidance; soil management; meeting regulatory requirements, workshops and
+      training and assurance schemes.</p>
+
+    <p>With over 15 years of providing farm advice in Hampshire and the surrounding areas, Amanda has a BSc in Ecology
+      and is a member of the Chartered Institute of Ecology and Environmental Management as well as holding
+      certificates in BASIS Foundation in Agronomy, Soil and Water Management and Conservation Management. She has
+      over 10 years experience of working on agri-environment schemes including Countryside Stewardship as well as
+      delivery of independent grant schemes and partnership projects.</p>
+
+  </section>
+  <!-- About Section Ends Here -->
+
+
+  <!-- Services Section Starts Here -->
+  <section class="services-wrapper" id="services">
+    <h2 class="section-title">How can we help you?</h2>
+
+    <div class="services-card">
+      <div class="services-card-title">
+        <h3>Countryside Stewardship</h3>
+      </div>
+
+      <div class="services-card-img">
+        <img class="services-img-mobile" src="/assets/images/fieldTractorMobile.jpeg" alt="">
+        <img class="services-img-desktop" src="/assets/images/fieldTractorDesktop3.jpeg" alt="">
+      </div>
+
+      <div class="services-card-content">
+        <div class="stewardship-options">
+          <div class="stewardship-title">
+            <h4 class="stewardship-link">Pre-entry Countryside Stewardship Farm Review</h4>
+            <h4 class="stewardship-btn">+</h4>
+          </div>
+          <p class="stewardship-description">An initial visit to your farm to discuss the Countryside
+            Stewardship scheme requirements, priorities for your area and to identify potential options that you may
+            like
+            to consider in your application. A short report will be produced to help inform your future application.
           </p>
         </div>
-      </div>
 
-      <div class="services-card">
-        <div class="services-card-title">
-          <h3>Soil Management</h3>
+        <div class="stewardship-options">
+          <div class="stewardship-title">
+            <h4 class="stewardship-link">Mid Tier, Higher Tier and Capital Grant Applications</h4>
+            <h4 class="stewardship-btn">+</h4>
+          </div>
+          <p class="stewardship-description">With over 10 years in undertaking successful
+            agri-environment scheme applications, Amanda will work with you to design an application that meets the
+            priorities for the area. Maximising your chances of a successful agreement, while working with the
+            requirements of your farm business.</p>
         </div>
-        <div class="services-card-img"> <img src="/assets/images/soilManagementMobile.jpeg" alt=""></div>
 
-        <div class="services-card-content">
-          <p class="services-description">Provide advice on diffuse pollution and resource protection including the soil
-            management requirements under
-            Cross Compliance.</p>
+        <div class="stewardship-options">
+          <div class="stewardship-title">
+            <h4 class="stewardship-link">Application Check </h4>
+            <h4 class="stewardship-btn">+</h4>
+          </div>
+          <p class="stewardship-description">If you prefer to carry out your own application we provide an application
+            check service, ensuring the forms
+            have been completed as required and advising on whether the options chosen fit with the
+            Countryside Stewardship priorities for the area, maximising your chances of a successful application.</p>
         </div>
-      </div>
 
-      <div class="services-card">
-        <div class="services-card-title">
-          <h3>Farm Advice Training and
-            Workshops</h3>
-        </div>
-        <div class="services-card-img"> <img src="/assets/images/workshopMobile.jpeg" alt=""></div>
-
-        <div class="services-card-content">
-          <p class="services-description">Experienced in arranging and delivering training and workshops on a range of
-            topics.</p>
-          <p>Recent events have included:</p>
-          <ul>
-            <li>hedgerow management</li>
-            <li>soil management</li>
-            <li>NVZ and Cross Compliance update</li>
-            <li>biobeds</li>
-            <li>equine management</li>
-            <li>farm pollinators</li>
-            <li>slug control</li>
-          </ul>
+        <div class="stewardship-options">
+          <div class="stewardship-title">
+            <h4 class="stewardship-link">Stewardship Scheme MOT</h4>
+            <h4 class="stewardship-btn">+</h4>
+          </div>
+          <p class="stewardship-description">Helping you to ensure you are meeting the requirements of your ELS, OELS,
+            HLS or Countryside Stewardship
+            scheme. Providing reassurance on compliance with the regulatory requirements together
+            with advice on how to maximise the environmental benefits of your scheme.</p>
         </div>
 
       </div>
+    </div>
 
-    </section>
-    <!-- Services Section Ends Here -->
+    <div class="services-card">
+      <div class="services-card-title">
+        <h3>Access to support schemes</h3>
+      </div>
 
-    <!-- Case Studies Section Starts Here -->
-    <!-- <section class="case-studies-wrapper" id="case-studies"></section> -->
-    <!-- Case Studies Section Ends Here -->
+      <div class="services-card-img"> <img src="/assets/images/lambsMobile.jpeg" alt=""></div>
+
+      <div class="services-card-content">
+        <p class="services-description">A wide variety of grants are now available to farmers in order to help support
+          environmental management.</p>
+
+        <p class="services-description">From Mid Tier to Higher Tier, Capital Grants and Woodland Support Grants,
+          through to Farming in Protected
+          Landscapes, Farming Investment Fund, Water Company grant schemes.</p>
+
+        <p class="services-description">With over 10 years experience in undertaking successful agri-environment
+          scheme
+          applications as well
+          as working with Catchment Sensitive Farming and Water Companies to implement and deliver grant schemes,
+          Amanda
+          can advise you on funding opportunities available, help you to decide what is right for your farm and assist
+          from application to delivery.
+        </p>
+      </div>
+    </div>
+
+    <div class="services-card">
+      <div class="services-card-title">
+        <h3>Soil Management</h3>
+      </div>
+      <div class="services-card-img"> <img src="/assets/images/soilManagementMobile.jpeg" alt=""></div>
+
+      <div class="services-card-content">
+        <p class="services-description">Provide advice on diffuse pollution and resource protection including the soil
+          management requirements under
+          Cross Compliance.</p>
+      </div>
+    </div>
+
+    <div class="services-card">
+      <div class="services-card-title">
+        <h3>Farm Advice Training and
+          Workshops</h3>
+      </div>
+      <div class="services-card-img"> <img src="/assets/images/workshopMobile.jpeg" alt=""></div>
+
+      <div class="services-card-content">
+        <p class="services-description">Experienced in arranging and delivering training and workshops on a range of
+          topics.</p>
+        <p>Recent events have included:</p>
+        <ul>
+          <li>hedgerow management</li>
+          <li>soil management</li>
+          <li>NVZ and Cross Compliance update</li>
+          <li>biobeds</li>
+          <li>equine management</li>
+          <li>farm pollinators</li>
+          <li>slug control</li>
+        </ul>
+      </div>
+
+    </div>
+
+  </section>
+  <!-- Services Section Ends Here -->
+
+  <!-- Case Studies Section Starts Here -->
+  <!-- <section class="case-studies-wrapper" id="case-studies"></section> -->
+  <!-- Case Studies Section Ends Here -->
 
 
-    <!-- Footer Starts Here -->
-    <footer class="footer" id="footer">
+  <!-- Footer Starts Here -->
+  <footer class="footer" id="footer">
 
-      <div class="social-links flex-center">
+    <div class="social-links flex-center">
 
-        <div>
-          <ul class="flex-center">
-            <li><a href="http://twitter.com"><i class="fa-brands fa-twitter"></i></a></li>
+      <div>
+        <ul class="flex-center">
+          <li><a href="http://twitter.com"><i class="fa-brands fa-twitter"></i></a></li>
 
-            <li><a href="https://facebook.com"><i class="fa-brands fa-facebook-f"></i></a></li>
+          <li><a href="https://facebook.com"><i class="fa-brands fa-facebook-f"></i></a></li>
 
-            <li><a href="https://linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a></li>
-          </ul>
-
-        </div>
-
-        <div class="copyright flex-center">
-          <p>&copy; <span id="date"></span></p>
-          <p> Skylark Farm Advice</p>
-        </div>
+          <li><a href="https://linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a></li>
+        </ul>
 
       </div>
 
+      <div class="copyright flex-center">
+        <p>&copy; <span id="date"></span></p>
+        <p> Skylark Farm Advice</p>
+      </div>
+
+    </div>
 
 
 
-    </footer>
+
+  </footer>
 
 
   </div>
